<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_main_to_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="secondActivity"
        android:text="@string/continuar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_gatos"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/text_instruccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_value_instruccion"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_bienvenida"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_correo_electronico"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/constraseña"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_instruccion"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/constraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/check_gatos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.5" />

    <CheckBox
        android:id="@+id/check_gatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_text_gatos"
        app:layout_constraintBottom_toTopOf="@+id/button_main_to_second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraseña"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/text_bienvenida"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_value_bienvenida"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/text_instruccion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>